--- a/index.html
+++ b/index.html
@@ -50,6 +50,11 @@
             margin: 20px;
             display: flex;
             flex-direction: column;
+            align-items: center;
+        }
+
+        #searchContainer {
+            margin-bottom: 20px;
         }
 
         .manga-list {
@@ -105,8 +110,10 @@
         </nav>
     </header>
     <main>
-        <input type="text" id="searchInput" placeholder="Search for manga..." />
-        <button id="searchButton">Search</button>
+        <div id="searchContainer">
+            <input type="text" id="searchInput" placeholder="Search for manga..." />
+            <button id="searchButton">Search</button>
+        </div>
         <div id="mangaList" class="manga-list"></div>
     </main>
     <footer>
@@ -130,13 +137,7 @@
             if (query) {
                 fetch(`https://ab-manga-api.vercel.app/search/${encodeURIComponent(query)}`)
                     .then(response => response.json())
-                    .then(data => {
-                        if (data.length === 0) {
-                            document.getElementById('mangaList').innerHTML = '<p>No results found.</p>';
-                        } else {
-                            displayManga(data);
-                        }
-                    })
+                    .then(data => displayManga(data))
                     .catch(handleError);
             } else {
                 fetchManga(); // If no query, just fetch the manga list
@@ -150,7 +151,7 @@
                 const mangaItem = document.createElement('div');
                 mangaItem.className = 'manga-item';
                 mangaItem.innerHTML = `
-                    <a href="https://ab-manga-api.vercel.app/manga/${manga.id}">
+                    <a href="manga-info.html?id=${manga.id}"> <!-- Link to the manga info page -->
                         <img src="${manga.cover}" alt="${manga.title}">
                         <h3>${manga.title}</h3>
                     </a>
