--- a/index.html
+++ b/index.html
@@ -5,20 +5,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manga Gallery</title>
     <style>
+        /* General Styles */
         body {
-            font-family: Arial, sans-serif;
-            background-color: #f8f9fa;
+            font-family: 'Poppins', sans-serif;
+            background: linear-gradient(135deg, #f0f0f0 0%, #c1c1c1 100%);
             margin: 0;
             padding: 0;
+            color: #333;
         }
 
         header {
-            background-color: #343a40;
+            background-color: #23242a;
             color: white;
-            padding: 10px 20px;
+            padding: 15px 20px;
             display: flex;
             align-items: center;
             justify-content: space-between;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        }
+
+        header h1 {
+            font-family: 'Poppins', sans-serif;
+            font-size: 24px;
+            letter-spacing: 1px;
         }
 
         nav ul {
@@ -35,62 +44,119 @@
         nav ul li a {
             color: white;
             text-decoration: none;
+            font-weight: 500;
+            transition: color 0.3s;
         }
 
         nav ul li a:hover {
-            text-decoration: underline;
+            color: #ffcc00;
         }
 
+        /* Main content styles */
         main {
-            margin: 20px;
+            margin: 40px auto;
             display: flex;
             flex-direction: column;
             align-items: center;
+            max-width: 1200px;
         }
 
+        /* Search Bar Styles */
         #searchContainer {
-            margin-bottom: 20px;
+            display: flex;
+            justify-content: center;
+            margin-bottom: 40px;
+            position: relative;
         }
 
+        #searchInput {
+            width: 400px;
+            padding: 15px;
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            border-radius: 30px;
+            background: rgba(255, 255, 255, 0.1);
+            backdrop-filter: blur(5px);
+            font-size: 16px;
+            color: white;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: box-shadow 0.3s;
+        }
+
+        #searchInput::placeholder {
+            color: rgba(255, 255, 255, 0.6);
+        }
+
+        #searchInput:focus {
+            outline: none;
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
+        }
+
+        #searchButton {
+            position: absolute;
+            right: 10px;
+            top: 7px;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 20px;
+            background-color: #ffcc00;
+            color: #23242a;
+            font-weight: bold;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        #searchButton:hover {
+            background-color: #e0b700;
+        }
+
+        /* Manga List Styles */
         .manga-list {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
-            gap: 20px;
+            grid-template-columns: repeat(auto-fill, minmax(180px, 1fr));
+            gap: 30px;
+            width: 100%;
         }
 
         .manga-item {
-            border: 1px solid #ccc;
-            border-radius: 5px;
+            border: none;
+            border-radius: 10px;
             overflow: hidden;
             background-color: white;
-            transition: transform 0.2s;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s, box-shadow 0.3s;
         }
 
         .manga-item:hover {
             transform: scale(1.05);
+            box-shadow: 0 6px 12px rgba(0, 0, 0, 0.2);
         }
 
         .manga-item img {
             width: 100%;
             height: auto;
+            border-bottom: 2px solid #f8f9fa;
         }
 
         .manga-item h3 {
             margin: 10px;
-            font-size: 14px;
+            font-size: 16px;
             color: #333;
             text-align: center;
         }
 
+        /* Footer Styles */
         footer {
             text-align: center;
             padding: 20px;
-            background-color: #343a40;
+            background-color: #23242a;
             color: white;
+            margin-top: 40px;
+            box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
         }
     </style>
 </head>
 <body>
+
     <header>
         <div class="logo">
             <h1>Manga Gallery</h1>
