--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Manga Gallery</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background: linear-gradient(135deg, #f0f0f0 0%, #c1c1c1 100%);
+            background: linear-gradient(135deg, #e3e3e3 0%, #c1c1c1 100%);
             margin: 0;
             padding: 0;
             color: #333;
@@ -50,20 +51,23 @@
             flex-direction: column;
             align-items: center;
             max-width: 1200px;
+            padding: 0 20px;
         }
         #searchContainer {
             display: flex;
             justify-content: center;
             margin-bottom: 40px;
             position: relative;
+            width: 100%;
         }
         #searchInput {
-            width: 400px;
+            width: 100%;
+            max-width: 600px;
             padding: 15px;
-            border: 1px solid rgba(255, 255, 255, 0.2);
+            border: none;
             border-radius: 30px;
             background: rgba(255, 255, 255, 0.1);
-            backdrop-filter: blur(5px);
+            backdrop-filter: blur(10px);
             font-size: 16px;
             color: white;
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -102,7 +106,7 @@
             border: none;
             border-radius: 10px;
             overflow: hidden;
-            background-color: white;
+            background-color: rgba(255, 255, 255, 0.8);
             box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
             transition: transform 0.3s, box-shadow 0.3s;
         }
@@ -128,6 +132,36 @@
             color: white;
             margin-top: 40px;
             box-shadow: 0 -4px 6px rgba(0, 0, 0, 0.1);
+        }
+        @media (max-width: 768px) {
+            header h1 {
+                font-size: 20px;
+            }
+            nav ul li {
+                margin-left: 10px;
+            }
+            #searchInput {
+                padding: 10px;
+                font-size: 14px;
+            }
+            #searchButton {
+                padding: 8px 16px;
+                right: 5px;
+                top: 5px;
+            }
+        }
+        @media (max-width: 480px) {
+            header {
+                flex-direction: column;
+                text-align: center;
+            }
+            nav ul {
+                flex-direction: column;
+            }
+            nav ul li {
+                margin-left: 0;
+                margin-top: 10px;
+            }
         }
     </style>
 </head>
