--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Manga </title>
+    <title>Manga Gallery</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <style>
         body {
@@ -23,7 +23,6 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
         }
         header h1 {
-            font-family: 'Poppins', sans-serif;
             font-size: 24px;
             letter-spacing: 1px;
         }
@@ -191,53 +190,73 @@
     </footer>
     <script>
         document.addEventListener('DOMContentLoaded', () => {
-            fetchManga(); 
+            fetchManga(); // Load initial manga list
             document.getElementById('searchButton').addEventListener('click', searchManga);
         });
 
+        // Function to fetch manga list
         function fetchManga(page = 1) {
             const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
             const apiUrl = `https://ab-manga-api.vercel.app/manga?page=${page}`;
+
             fetch(proxyUrl + encodeURIComponent(apiUrl))
                 .then(response => response.json())
-                .then(data => displayManga(data))
-                .catch(handleError);
+                .then(data => {
+                    console.log('Fetched manga data:', data); // Added logging for fetched data
+                    displayManga(data);
+                })
+                .catch(error => {
+                    handleError(error);
+                });
         }
 
+        // Function to search manga
         function searchManga() {
             const query = document.getElementById('searchInput').value.trim();
             const proxyUrl = `https://worker-tight-lake-a297.abrahamdw882.workers.dev/?u=`;
+
             if (query) {
                 const apiUrl = `https://ab-manga-api.vercel.app/search/${encodeURIComponent(query)}`;
                 fetch(proxyUrl + encodeURIComponent(apiUrl))
                     .then(response => response.json())
-                    .then(data => displayManga(data))
-                    .catch(handleError);
+                    .then(data => {
+                        console.log('Searched manga data:', data); // Added logging for searched data
+                        displayManga(data);
+                    })
+                    .catch(error => {
+                        handleError(error);
+                    });
             } else {
-                fetchManga();
+                fetchManga(); // If no query, just fetch the manga list
             }
         }
 
+        // Function to display manga
         function displayManga(data) {
             const mangaList = document.getElementById('mangaList');
-            mangaList.innerHTML = ''; 
+            mangaList.innerHTML = ''; // Clear previous results
 
             data.forEach(manga => {
                 const mangaItem = document.createElement('div');
                 mangaItem.className = 'manga-item';
-                console.log(`Cover URL: ${manga.cover}`); // Log URLs
+
+                // Log each manga's title and cover URL for debugging
+                console.log(`Displaying: ${manga.title}, Cover URL: ${manga.cover}`);
+
                 mangaItem.innerHTML = `
                     <a href="manga-info.html?id=${manga.id}">
                         <img src="${manga.cover}" alt="${manga.title}">
                         <h3>${manga.title}</h3>
                     </a>
                 `;
+
                 mangaList.appendChild(mangaItem);
             });
         }
 
+        // Error handling function
         function handleError(error) {
-            console.error('Error:', error);
+            console.error('Error fetching data:', error);
             document.getElementById('mangaList').innerHTML = '<p>Error fetching data. Please try again later.</p>';
         }
     </script>
