--- a/index.html
+++ b/index.html
@@ -53,6 +53,40 @@
             max-width: 1200px;
             padding: 0 20px;
         }
+        #sliderContainer {
+            width: 100%;
+            overflow: hidden;
+            position: relative;
+            margin-bottom: 20px; /* Adjusted to reduce space */
+        }
+        .mySlides {
+            display: none;
+            flex-direction: column;
+            align-items: center;
+            position: relative; /* Added to position buttons */
+        }
+        .mySlides img {
+            width: 100%;
+            height: 400px; /* Set a fixed height */
+            object-fit: cover; /* Ensures images cover the area */
+        }
+        .prev, .next {
+            position: absolute;
+            top: 50%;
+            transform: translateY(-50%);
+            background-color: rgba(255, 255, 255, 0.8);
+            border: none;
+            padding: 10px;
+            cursor: pointer;
+            z-index: 1;
+            font-size: 24px;
+        }
+        .prev {
+            left: 10px;
+        }
+        .next {
+            right: 10px;
+        }
         #searchContainer {
             display: flex;
             justify-content: center;
@@ -95,21 +129,6 @@
         }
         #searchButton:hover {
             background-color: #e0b700;
-        }
-        #sliderContainer {
-            width: 100%;
-            overflow: hidden;
-            position: relative;
-            margin-bottom: 40px;
-        }
-        .mySlides {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-        }
-        .mySlides img {
-            width: 100%;
-            height: auto;
         }
         .manga-list {
             display: grid;
@@ -204,9 +223,9 @@
                 <img src="slide2_image_url" alt="Slide 2">
                 <h3>Trending Manga Title 2</h3>
             </div>
+            <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
+            <button class="next" onclick="plusSlides(1)">&#10095;</button>
         </div>
-        <button onclick="plusSlides(-1)">&#10094;</button>
-        <button onclick="plusSlides(1)">&#10095;</button>
         <div id="searchContainer">
             <input type="text" id="searchInput" placeholder="Search for manga...">
             <button id="searchButton">Search</button>
@@ -279,16 +298,17 @@
 
         function setupSlider(data) {
             const sliderContainer = document.getElementById('sliderContainer');
-            sliderContainer.innerHTML = '';
+            const slides = sliderContainer.getElementsByClassName('mySlides');
+            Array.from(slides).forEach(slide => slide.remove()); // Clear existing slides
 
-            data.forEach((manga, index) => {
+            data.forEach((manga) => {
                 const slide = document.createElement('div');
                 slide.className = 'mySlides';
                 slide.innerHTML = `
                     <img src="${manga.cover}" alt="${manga.title}">
                     <h3>${manga.title}</h3>
                 `;
-                sliderContainer.appendChild(slide);
+                sliderContainer.insertBefore(slide, sliderContainer.lastElementChild); // Insert before buttons
             });
 
             showSlides(slideIndex);
