--- a/index.html
+++ b/index.html
@@ -214,6 +214,7 @@
         </nav>
     </header>
     <main>
+        <!-- Slider Container -->
         <div id="sliderContainer">
             <div class="mySlides" style="display: flex;">
                 <img src="slide1_image_url" alt="Slide 1">
@@ -226,10 +227,14 @@
             <button class="prev" onclick="plusSlides(-1)">&#10094;</button>
             <button class="next" onclick="plusSlides(1)">&#10095;</button>
         </div>
+
+        <!-- Search Container -->
         <div id="searchContainer">
             <input type="text" id="searchInput" placeholder="Search for manga...">
             <button id="searchButton">Search</button>
         </div>
+
+        <!-- Manga List -->
         <div id="mangaList" class="manga-list"></div>
     </main>
     <footer>
